--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 
             <form class="card p-2">
               <div class="input-group">
-                <label for="promo-code"></label>
+                <label for="promo-code">Promo code</label>
                 <input name="promo-code" type="text" class="form-control">
                 <button type="submit" class="btn btn-secondary">Redeem</button>
               </div>
