--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                   <h6 class="my-0">Promo code</h6>
                   <small>EXAMPLECODE</small>
                 </div>
-                <span class="text-success">−$5</span>
+                <span class="text-success">-$5</span>
               </li>
               <li class="list-group-item d-flex justify-content-between">
                 <span>Total (USD)</span>
@@ -72,7 +72,7 @@
             <form class="card p-2">
               <div class="input-group">
                 <label for="promo-code">Promo code</label>
-                <input name="promo-code" type="text" class="form-control">
+                <input id="promo-code" type="text" class="form-control">
                 <button type="submit" class="btn btn-secondary">Redeem</button>
               </div>
             </form>
