--- a/index.html
+++ b/index.html
@@ -79,8 +79,8 @@
           </div>
           <div class="col-md-7 col-lg-8">
             <fieldset>
-            <leyend class="mb-3">Billing address</leyend>
-            <form class="needs-validation" novalidate>
+            <legend class="mb-3">Billing address</legend>
+            <form class="needs-validation" action="#" method="post" novalidate>
               <div class="row g-3">
                 <div class="col-sm-6">
                   <label for="firstName" class="form-label">First name</label>
@@ -177,7 +177,7 @@
 
             <hr class="my-4">
             <fieldset>
-              <leyend class="mb-3">Payment</leyend>
+              <legend class="mb-3">Payment</legend>
 
               <div class="my-3">
                 <div class="form-check">
