fix: form accesibility

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
           <div class="col-md-7 col-lg-8">
             <fieldset>
             <legend class="mb-3">Billing address</legend>
-            <form class="needs-validation" action="#" method="post" novalidate>
+            <form class="needs-validation" action="https://www.example.org" method="post">
               <div class="row g-3">
                 <div class="col-sm-6">
                   <label for="firstName" class="form-label">First name</label>
